fix: refactored the test removeSignaturesFromTransaction so it uses the method BitcoinUtils::signInput